chore: updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ iam-proxy-italia-project/logs/*.log
 iam-proxy-italia-project/metadata/*.md
 iam-proxy-italia-project/data/*
 iam-proxy-italia-project/private/*
+iam-proxy-italia-project/wwwallet/mysql/data/
 *.pyc
 *pyFF_example/info.log
 *pyFF_example/error.log
@@ -29,6 +30,7 @@ Docker-compose/nginx/html/static/*
 Docker-compose/certbot/live/localhost
 Docker-compose/.env
 Docker-compose/eudi-wallet-it-python
+Docker-compose/wwwallet
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
@@ -40,3 +42,6 @@ Docker-compose/eudi-wallet-it-python
 # Ignore Mac system files
 **/.DS_Store
 .DS_Store
+*.log.*
+*.log
+*.sqlite3
