--- a/Docker-compose/nginx/conf.d/default.conf
+++ b/Docker-compose/nginx/conf.d/default.conf
@@ -21,6 +21,8 @@ server {
     root /usr/share/nginx/html;
     try_files $uri/index.html $uri @satosa;
 
+    include ./conf.d/sites-enabled/*.conf;
+
     location @satosa {
       rewrite /.well-known/jar-issuer/OpenID4VP /OpenID4VP/.well-known/jar-issuer break;
       rewrite /.well-known/jwt-vc-issuer/OpenID4VP /OpenID4VP/.well-known/jwt-vc-issuer break;
@@ -39,16 +41,6 @@ server {
       uwsgi_buffers              4 256k;
       uwsgi_busy_buffers_size    256k;
       uwsgi_param SERVER_ADDR $server_addr;
-    }
-
-    location /wallet-trust-anchor/ {
-        proxy_pass http://wallet-trust-anchor:8005/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Ssl on; # Optional
-        proxy_set_header X-Forwarded-Port $server_port;
     }
 
     location /static/ {
