--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ Docker-compose/certbot/live/localhost
 Docker-compose/.env
 Docker-compose/eudi-wallet-it-python
 Docker-compose/wwwallet
+Docker-compose/spid_cie_oidc_django
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
