rev: openid4vci wwwallet, use SATOSA_BASE_OPENID4VCI env instead same basehost

--- a/Docker-compose/env.example
+++ b/Docker-compose/env.example
@@ -1,5 +1,6 @@
 SATOSA_HOSTNAME=localhost
 SATOSA_BASE=https://${SATOSA_HOSTNAME:-localhost}
+SATOSA_BASE_OPENID4VCI=${SATOSA_BASE}/OpenID4VCI
 SATOSA_BASE_STATIC=${SATOSA_BASE}/static
 SATOSA_DISCO_SRV=${SATOSA_BASE_STATIC}/disco.html
 SATOSA_UNKNOW_ERROR_REDIRECT_PAGE=${SATOSA_BASE_STATIC}/error_page.html
@@ -63,3 +64,5 @@ SATOSA_UI_PRIVACY_URL_IT="https://example_organization.org/it/privacy"
 
 # If set to true, satosa downloads IDEM's keys and IDPs from registry.spid.gov.it
 GET_IDEM_MDQ_KEY=true
+
+SATOSA_DEBUG=true
