--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ Docker-compose/djangosaml2_sp/*
 Docker-compose/mongo/db/*
 Docker-compose/nginx/html/static/*
 Docker-compose/nginx/conf.d/sites-enabled/wwwallet.conf
+Docker-compose/nginx/conf.d/wwwallet.default.conf
 Docker-compose/certbot/live/localhost
 Docker-compose/.env
 Docker-compose/wwwallet/*
