--- a/iam-proxy-italia-project/internal_attributes.yaml
+++ b/iam-proxy-italia-project/internal_attributes.yaml
@@ -9,6 +9,7 @@ attributes:
     orcid: [name.credit-name]
     github: [login]
     saml: [displayName, familyname, FamilyName, familyName]
+    cie_oidc: [first_name]
   edupersontargetedid:
     facebook: [id]
     linkedin: [id]
@@ -17,6 +18,7 @@ attributes:
     openid: [sub]
     saml: [eduPersonTargetedID, eduPersonTargetedId, spidCode, sub, id, fiscalNumber]
     openid4vp: [sub]
+    cie_oidc: [sub]
   edupersonprincipalname:
     saml: [eduPersonPrincipalName]
   edupersonscopedaffiliation:
@@ -38,6 +40,7 @@ attributes:
     openid: [given_name]
     openid4vp: [given_name]
     saml: [givenName, name, Name]
+    cie_oidc: [first_name]
   mail:
     facebook: [email]
     linkedin: [email-address]
@@ -47,6 +50,7 @@ attributes:
     saml: [mail, email]
     openid4vp: [mail, email]
     openid4vci: [mail, email]
+    cie_oidc: [email]
   name:
     facebook: [name]
     orcid: [name.credit-name]
@@ -55,6 +59,7 @@ attributes:
     saml: [name, Name]
     openid4vp: [given_name]
     openid4vci: [given_name]
+    cie_oidc: [first_name]
   surname:
     facebook: [last_name]
     linkedin: [lastName]
@@ -63,6 +68,7 @@ attributes:
     saml: [sn, surname, familyName, FamilyName]
     openid4vp: [family_name]
     openid4vci: [family_name]
+    cie_oidc: [last_name]
   # spid related
   spidcode:
     openid: [spidcode]
@@ -78,10 +84,15 @@ attributes:
     openid: [email]
     openid4vp: [mail, email]
     saml: [mail]
+    cie_oidc: [email]
+
   familyname:
     saml: [familyName, familyname, FamilyName]
+    cie_oidc: [last_name]
+
   fiscalnumber:
     saml: [fiscalNumber, fiscalnumber, FiscalNumber]
+    cie_oidc: [fiscal_number]
   gender:
     saml: [gender, Gender]
   companyName:
